Feat: Change UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Project_SmartHome</string>
+    <string name="HomeScreenTitle">우리 집 IOT</string>
 </resources>
